Fix fullscreen on mobile

--- a/src/WebShell/templates/sass/rmrf.scss
+++ b/src/WebShell/templates/sass/rmrf.scss
@@ -81,33 +81,13 @@ $success: $green;
 // @import 'icon-embedded';
 
 
-// fix horizontal box spacing
-.box {
-	margin-left: 0.75rem;
-	margin-right: 0.75rem;
-}
-
-// fix vertical spacing after last box
-.box:last-child {
-	margin-bottom: 1.5rem;
-}
-
-// save some room on left/right side
-.section {
-	padding: 2rem 2rem;
-}
-
-// table
-.table-wrapper {
-    overflow-x: auto;
-}
-
-
 // game
 #game{
     background: #252525;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #game img {
